# gpmf-parser

./: .dockerignore  .gitignore  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  GPDeps  GPMF_bitstream.h  GPMF_common.h  GPMF_export.h  GPMF_parser.c  GPMF_parser.h  GPMF_utils.c  GPMF_utils.h  GUIDELINES.md  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  LICENSE.txt  Mayhemfile  README.md  gpmf-parser.pc.in  run.sh
demo/: GPMF_demo.c  GPMF_demo_csv.c  GPMF_mp4reader.c  GPMF_mp4reader.h  GPMF_print.c  GPMF_utils.c  GPMF_utils.h  gpmfdemo  makefile  str_split.c  str_split.h
docs/: README.md  _config.yml
docs/_layouts/: default.hml
docs/assets/css/: style.scss
fuzz/: fuzz_parse.c
python/: .gitignore  MANIFEST.in  Makefile  cysetuptools.py  setup.cfg  setup.py
python/gpmf/: __init__.py  _gpmf.pyx  exceptions.py  mp4reader.pxd  mp4reader.pyx  parser.pxd  parser.pyx
python/tests/: conftest.py  test_parser.py
samples/: Fusion.raw  SAMPLES.md  hero5.raw  hero6+ble.raw  hero6.raw  karma.raw
