[metadata]
name = gpmf
version = attr: gpmf.__version__
description = GoPro GPMF parser
keywords = GoPro metadata parser GPMF
author = Luper Rouch
author_email = luper.rouch@gmail.com
url = https://github.com/gopro/gpmf-parser
license = MIT

[options]
packages = find:
install_requires = cython
setup_requires = cython
zip_safe = False
include_package_data = True

[options.extras_require]
dev = pytest

[cython-module: gpmf.parser]
sources = gpmf/parser.pyx
          ../GPMF_parser.c
include_dirs = ..
               ../demo

[cython-module: gpmf.mp4reader]
sources = gpmf/mp4reader.pyx
          ../demo/GPMF_mp4reader.c
include_dirs = ..
               ../demo
